@@ -22,8 +22,8 @@ before you read this one, which provides subservient details.
 This document outlines the grammar of the I<Hosted Data Muldis D> dialect
 named C<HDMD_Perl_Tiny>.  The fully-qualified name of this Muldis D
 dialect, in combination with the base language spec it is bundled with, is
-C<Muldis_D:'cpan:DUNCAND':'N.N.N':'HDMD_Perl_Tiny'> (when the bundled base
-language version is substituted for the C<N.N.N>).
+C<Muldis_D:'http://muldis.com':'N.N.N':'HDMD_Perl_Tiny'> (when the bundled
+base language version is substituted for the C<N.N.N>).
 
 This dialect is designed to exactly match the Muldis D system catalog (the
 possible representation of Muldis D code that is visible to or updateable
@@ -103,7 +103,7 @@ Node type / language base name: the Perl C<Str> value C<Muldis_D>.
 =item *
 
 Base authority: a Perl C<Str> as per the payload of a C<Text> node;
-typically the Perl C<Str> value C<cpan:DUNCAND>.
+typically the Perl C<Str> value C<http://muldis.com>.
 
 =item *
 
@@ -122,7 +122,7 @@ Extensions: a Perl C<Hash|Mapping> as per the payload of a C<Tuple> node.
 
 Examples:
 
-    [ 'Muldis_D', 'cpan:DUNCAND', '1.2.3', 'HDMD_Perl_Tiny', {} ]
+    [ 'Muldis_D', 'http://muldis.com', '1.2.3', 'HDMD_Perl_Tiny', {} ]
 
 More specifically, a language name PHMD node like the above would generally
 be the input for a Perl Hosted Muldis D implementating virtual machine's
