@@ -22,7 +22,7 @@ before you read this one, which provides subservient details.
 This document outlines the grammar of the I<Plain Text Muldis D> dialect
 named C<PTMD_Tiny>.  The fully-qualified name of this Muldis D dialect, in
 combination with the base language spec it is bundled with, is
-C<Muldis_D:'cpan:DUNCAND':'N.N.N':'PTMD_Tiny'> (when the bundled base
+C<Muldis_D:'http://muldis.com':'N.N.N':'PTMD_Tiny'> (when the bundled base
 language version is substituted for the C<N.N.N>).
 
 This dialect is designed to exactly match the Muldis D system catalog (the
@@ -83,8 +83,8 @@ execution.  Any remaining errors should be corrected as soon as possible.
 
     use v6-alpha;
 
-    # grammar Muldis_D_PTMD_Tiny:auth<cpan:DUNCAND>:ver<0.16.0>;
-    grammar Muldis_D_PTMD_Tiny-0.16.0-cpan:DUNCAND;
+    # grammar Muldis_D_PTMD_Tiny:auth<http://muldis.com>:ver<0.16.0>;
+    grammar Muldis_D_PTMD_Tiny-0.16.0-http://muldis.com;
 
     token start {
         (<language_name>)
@@ -395,7 +395,7 @@ execution.  Any remaining errors should be corrected as soon as possible.
 
 The following are fragments of actual Plain Text Muldis D code.
 
-    Muldis_D:'cpan:DUNCAND':'1.2.3':'PTMD_Tiny':{}
+    Muldis_D:'http://muldis.com':'1.2.3':'PTMD_Tiny':{}
 
     Call:'sys.Core.Cat.create_public_relvar':{ ... }
 
