@@ -10,6 +10,16 @@
     PTMD_Tiny.pod 0.17.0 and HDMD_Perl_Tiny.pod 0.14.0.  The other
     pre-existing versioned files are unchanged.
 
+    * (D.pm)  Small updates to the TRADEMARK POLICY section.
+
+    * (D.pm, PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  Renamed the quasi-constant
+    second (authority) part of a fully-qualified name format for a Muldis D
+    language variant, applicable only to the official/original (not
+    embraced and extended) variants, from 'cpan:DUNCAND' to
+    'http://muldis.com'.  This is because the main web address of Muldis
+    Data Systems more closely represents the official authority on Muldis
+    D, rather than CPAN which is more just a forum for publishing it.
+
     * (Types_Catalog.pod)  Reorganized the catalog type definitions into
     new groupings based more on purpose than type inheritence.
 
